refactor(UI): refactored to accomodate client

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,6 +92,11 @@ body {
   justify-content: center;
   align-items: center;
 }
+.neon-ring.signup {
+  width: 800px;
+  height: 600px;
+
+}
 
 .neon-ring i {
   position: absolute;
